--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,24 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Fredoka', sans-serif;
+}
+
+.container {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.main-title {
+    text-align: center;
+    font-size: 35px;
+    color: #e53170;
+    padding: 30px;
+}
+
+ .main-paragraph {
+    text-align: center;
+    font-size: 14px;
+}
