--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,21 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 779px;
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .main-title {
     text-align: center;
-    font-size: 25px;
+    font-size: 22px;
     color: #e53170;
     padding: 30px;
 }
 
  .main-paragraph {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .clearfix::after {
@@ -37,6 +37,7 @@ body {
     width: calc(100% / 3 - 20px);
     background-color: black;
     margin: 10px;
+    margin-bottom: 20px;
     box-shadow: 0px 0px 3px 3px #88888848;
 }
 
@@ -48,6 +49,7 @@ body {
 .info {
     color: white;
     float: left;
+    height: 65px;
 }
 
 .info h4 {
@@ -57,7 +59,7 @@ body {
 
 .info p {
     font-size: 11px;
-    padding: 2px 10px;
+    padding: 1px 10px;
 }
 
 .info p:last-child {
