--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body {
     font-family: 'Fredoka', sans-serif;
 }
 
+/* Parte iniziale */
+
 .container {
     max-width: 779px;
     margin: 0 auto;
@@ -21,7 +23,7 @@ body {
     padding: 30px;
 }
 
- .main-paragraph {
+ .main-paragraph, footer {
     text-align: center;
     font-size: 12px;
 }
@@ -31,6 +33,8 @@ body {
     clear: both;
     display: table;
 }
+
+/* Schede */
 
 .card {
     float: left;
@@ -64,4 +68,14 @@ body {
 
 .info p:last-child {
     color: #69c5e6;
+}
+
+/* Paragrafo finale */
+
+footer {
+    width: 880px;
+    margin: 0 auto;
+    background-color: #222222e8;
+    color: lightgray;
+    padding: 18px 60px 50px 60px;
 }
